--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <script type="text/javascript" src="scripts/z2.js"></script>
     <script type="text/javascript" src="scripts/bgp.js"></script>
 
+    <script type="text/javascript" src="tg/strin2.js"></script>
     <script type="text/javascript" src="tg/strin.js"></script>
     <script type="text/javascript" src="tg/jet.js"></script>
 
